// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TermToggleGroupFilter render - active 1`] = `
Array [
  <WuiFilterButton
    aria-pressed={true}
    hasActiveFilters={true}
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    withNext={true}
  >
    Kibana
  </WuiFilterButton>,
  <WuiFilterButton
    aria-pressed={false}
    hasActiveFilters={false}
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    withNext={false}
  >
    Wazuhsearch
  </WuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render - active negated - custom negated name 1`] = `
Array [
  <WuiFilterButton
    aria-pressed={true}
    hasActiveFilters={true}
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    withNext={true}
  >
    -Kibana
  </WuiFilterButton>,
  <WuiFilterButton
    aria-pressed={false}
    hasActiveFilters={false}
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    withNext={false}
  >
    Wazuhsearch
  </WuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render - active negated 1`] = `
Array [
  <WuiFilterButton
    aria-pressed={true}
    hasActiveFilters={true}
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    withNext={true}
  >
    Not Kibana
  </WuiFilterButton>,
  <WuiFilterButton
    aria-pressed={false}
    hasActiveFilters={false}
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    withNext={false}
  >
    Wazuhsearch
  </WuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render 1`] = `
Array [
  <WuiFilterButton
    aria-pressed={false}
    hasActiveFilters={false}
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    withNext={true}
  >
    Kibana
  </WuiFilterButton>,
  <WuiFilterButton
    aria-pressed={false}
    hasActiveFilters={false}
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    withNext={false}
  >
    Wazuhsearch
  </WuiFilterButton>,
]
`;
